Add changes as directed in the exercises

--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <button type="submit">Create Car!</button>
       </form>
 
+      <div id="car-card"></div>
       <div id="car-container"></div>
     </div>
+    
 
     <script src="script.js"></script>
     <script src="./util/teacherJS.js"></script>
